# keyless-zk-proofs

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  config_local_testing.yml  config_local_testing_new_setup_specified.yml  conversion_config.yml  depot.json  private_key_for_testing_another.txt
.cargo/: config.toml
.github/workflows/: build-image.yaml  run-tests.yaml
keyless-common/src/: lib.rs
keyless-common/src/input_processing/: circuit_input_signals.rs  encoding.rs  sha.rs
prover/: Cargo.toml  README.md  config.yml  config_local_testing_new_setup_unspecified.yml  private_key_for_testing.txt  test_jwk.json
prover/resources/: 202405_vk.vkey
prover/resources/toy_circuit/: toy.circom  toy.r1cs  toy.wtns  toy_1.zkey  toy_input.json
prover/scripts/: dev_setup.sh
prover/src/: api.rs  error.rs  jwk_fetching.rs  lib.rs  logging.rs  main.rs  metrics.rs  prover_key.rs  state.rs  witness_gen.rs
prover/src/input_processing/: circuit_input_signals.rs  field_check_input.rs  mod.rs  preprocess.rs  public_inputs_hash.rs  rsa.rs  sha.rs  types.rs
prover/src/tests/: jwk_fetching.rs  mod.rs  smoke.rs  training_wheels.rs
prover/src/tests/common/: mod.rs  types.rs
prover/src/training_wheels/: sign.rs  verification_logic.rs
resources/toy_circuit/: toy_vk.json
scripts/: make_request.sh
src/: config.rs  groth16_vk.rs  handlers.rs  jwk_fetching.rs  load_vk.rs  watcher.rs
src/input_processing/: bits.rs  config.rs  preprocess.rs  sha.rs
src/tests/: playground.rs  smoke.rs
src/tests/common/: mod.rs  types.rs
src/training_wheels/: mod.rs  sign.rs  verification_logic.rs
