[workspace]
resolver = "2"

members = [
    "prover",
    "keyless-common",
    "circuit"
]

[workspace.package]
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
name = "prover-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.78.0"
publish = false
homepage = "https://aptoslabs.com"
license = "GPL3"
repository = "https://github.com/aptos-labs/prover-service"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true
overflow-checks = true

[workspace.dependencies]
anyhow = "1.0.79"
aptos-crypto = { git = "https://github.com/aptos-labs/aptos-core", branch = "main", package = "aptos-crypto" }
aptos-crypto-derive = { git = "https://github.com/aptos-labs/aptos-core", branch = "main", package = "aptos-crypto-derive" }
aptos-types = { git = "https://github.com/aptos-labs/aptos-core", branch = "main", package = "aptos-types" }
ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-groth16 = "0.4.0"
ark-serialize = "0.4.0"
ark-std = { version = "0.4.0", features = ["getrandom"] }
axum = "0.7.4"
axum-extra = "0.9.2"
axum-prometheus = { version = "0.6.1", features = ["prometheus"] }
axum-server = { version = "0.6.0", features = ["rustls", "rustls-pemfile", "tls-rustls"] }
backtrace = "0.3.69"
base64 = "0.13.0"
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
dashmap = "5.5.3"
figment = { version = "0.10.14", features = ["yaml", "env"] }
futures = "0.3.30"
futures-util = "0.3.30"
hex = { version = "0.4.3", features = ["serde"] }
http = "1.0.0"
indicatif = "0.17.8"
init-tracing-opentelemetry = { version = "0.14.1", features = ["otlp", "tracing_subscriber_ext"] }

jsonwebtoken = "8.1"
lazy_static = "1.4.0"
log = "0.4.20"
num-bigint = "0.4.4"
num-traits = "0.2.17"
once_cell = "1.19.0"
prometheus = "0.13.3"
rand = "0.7.3"
rand_core = "0.6.4"
regex = "1.10.5"
reqwest = { version = "0.11.24", features = ["json", "stream"] }
rsa = "0.9.6"
rust-rapidsnark = { path = "rust-rapidsnark" }
rustls = "0.22.2"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"
serial_test = "3.0.0"
sha2 = "0.10.8"
shellexpand = "3.1.0"
tempfile = "3.10.1"
thiserror = "1.0.57"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
aptos-keyless-common = { path = "keyless-common" }
aptos-keyless-pepper-common = { path = "keyless/pepper/common" }
aptos-keyless-pepper-service = { path = "keyless/pepper/service" }
aptos-logger = { git = "https://github.com/aptos-labs/aptos-core" }
itertools = "0.13"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }


